[package]
name = "rust_raytracer"
version = "0.1.0"
authors = ["Cody Duncan <programming@codyduncan.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
com = "0.2.0"
d3d12_rs = { package = "d3d12", version = "0.3", features = ["libloading"], git = "https://github.com/gfx-rs/d3d12-rs"}
lazy_static = "1.4.0"
libloading = { version = "0.5", optional = true }
winapi = { version = "0.3.8", features = ["d3d12", "d3d12sdklayers", "d3dcommon", "d3dcompiler", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgidebug", "dxgiformat", "handleapi", "libloaderapi", "synchapi", "winbase", "winerror", "winuser"] }
cgmath = "0.17.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"